# patternsofplay

./: .gitignore  BOOTSTRAP_PROMPT.md  CLAUDE.md  Makefile  package-lock.json  package.json  playwright.config.ts
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  scoped.py  security.py  specs.py  tokens.py
backend/app/models/: __init__.py  _util.py  formations.py  library.py  platform.py  roster.py  sessions.py  team_content.py
backend/app/routers/: auth.py  formations.py  identity.py  library.py  roster.py  suggestions.py  teams.py  whiteboard.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_platform_tables.py  0002_content_schema.py  0003_player_flank.py  0004_identity_age_hint.py  0004_role_scoped_join_codes.py  0005_identity_age_hint.py
backend/tests/: conftest.py  test_auth_teams.py  test_db.py  test_formations_routes.py  test_identity_routes.py  test_library_routes.py  test_migrations.py  test_permissions.py  test_roster_routes.py  test_scoped_query_layer.py  test_seed_content.py  test_specs.py  test_suggestions_routes.py  test_whiteboard_routes.py
e2e/: auth-teams.spec.ts  board.spec.ts  design-tokens.spec.ts  fixtures.ts  formations.spec.ts  identity.spec.ts  lanes.spec.ts  patterns.spec.ts  permissions.spec.ts  player.spec.ts  recorder.spec.ts  roster.spec.ts  smoke.spec.ts  suggestions.spec.ts  team-management.spec.ts  whiteboard.spec.ts  zones.spec.ts
frontend/: index.html  package.json  vite.config.ts
scripts/: check_copy.py  dev.sh  seed.py  validate_seeds.py
(+92 files in other folders)
